--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </button>
             <button class="speech-btn" data-part="hurop">
                 <i class="btn-icon fas fa-exclamation-circle"></i>
-                Hurop (Interjection)
+                Pangtarsanggang (Interjection)
             </button>
         </div>
         
